--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-# Created by .ignore support plugin (hsz.mobi)
-.idea
-dist
+.DS_Store
 node_modules
-package-lock.json
+/html
+example.html
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
